--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "react-dotenv": "^0.1.3"
   }
 }
